Añadido marcador footer

--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             </div>
         </div>
     </section><!--/#bottom-->
-
+<!----------------------------------------  footer          ----------------------------------------------------------->
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
